{
    "name": "DebugInputActions",
    "maps": [
        {
            "name": "Debug",
            "id": "db2436b7-e3fe-47cf-9d3a-63808904900b",
            "actions": [
                {
                    "name": "LoadNextLevel",
                    "type": "Button",
                    "id": "1a7f8e23-ceed-4bad-9944-7154571fa1b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CollisionToggle",
                    "type": "Button",
                    "id": "84fbfec5-be27-4f16-8da5-2d3a4a1d4061",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FuelToggle",
                    "type": "Button",
                    "id": "29c7e9c1-c9f8-423d-8bc5-cff0ae287885",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51dfad5e-eaef-4831-b297-042d771e47f0",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadNextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88ba08be-c50d-4f7a-8e05-272f2d69a9fe",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CollisionToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a0d6cf2-1d6b-4efe-991d-c2bf0808cf8d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FuelToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}